[package]
name = "omnipoker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix = "0.13"
actix-rt = "2.8"
actix-ws = "0.3"
tokio = { version = "1.24.2", features = ["sync", "io-util", "full"] }
tokio-util = "0.7.4"
async-trait = "0.1"
tokio-stream = "0.1.1"
rand = "0.8"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.4", features = ["v4"] }
itertools = "0.10"
mockall = "0.13"
delegate = "0.5"
tokio-tungstenite = "0.17"

