[package]
name = "omnipoker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.8"
actix-web = "4.0"
actix-ws = "0.3"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = [
    "std",
] }
itertools = "0.10"
log = "0.4"
rand = "0.8"
tokio = { version = "1.24.2", features = ["sync", "io-util", "full"] }
tokio-util = "0.7.4"
chrono = "0.4"
num_cpus = "1.15"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
mockall = "0.13"
tokio-tungstenite = "0.17"
tokio = { version = "1", features = ["full"] }
