[package]
name = "omnipoker-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
gloo-net = "0.6"
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4.46"
web-sys = "0.3.73"
